tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision7(strict=true).errors.txt
service.ts(2,24): error TS7006: Parameter 'target' implicitly has an 'any' type.
service.ts(7,9): error TS2702: 'db' only refers to a type, but is being used as a namespace here.
service.ts(9,21): error TS2702: 'db' only refers to a type, but is being used as a namespace here.


==== db.ts (0 errors) ====
    export default class db {
        public doSomething() {
        }
    }
    
==== service.ts (3 errors) ====
    import db from './db';
    function someDecorator(target) {
                           ~~~~~~
!!! error TS7006: Parameter 'target' implicitly has an 'any' type.
        return target;
    }
    @someDecorator
    class MyClass {
        db: db.db; //error
            ~~
!!! error TS2702: 'db' only refers to a type, but is being used as a namespace here.
    
        constructor(db: db.db) { // error
                        ~~
!!! error TS2702: 'db' only refers to a type, but is being used as a namespace here.
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    